<resources>
    <string name="app_name">Shopping List to Map</string>
    <string name="add_item">Add Item</string>
    <string name="eggs">Eggs</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="milk">Milk</string>
    <string name="wheat_flour">Wheat Flour</string>
    <string name="bread">Bread</string>
    <string name="sugar">Sugar</string>
    <string name="salt">Salt</string>
    <string name="oil">Oil</string>
    <string name="chocolate">Chocolate</string>
    <string name="space" />
    <string name="search_for_stores">Search for stores</string>
    <string name="search">Search</string>
    <string name="title_textview">Shopping List</string>
    <string name="header_shopping_items">Choose your items</string>
</resources>
